Fix: Overflow of Store's Review Template

--- a/public/stylesheets/store.css
+++ b/public/stylesheets/store.css
@@ -5,6 +5,10 @@
   width: 20rem;
 }
 
+.store.template {
+  display: none;
+}
+
 .store .title {
   display: flex;
   justify-content: space-between;
